--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat7 (7.0.14-1) UNRELEASED; urgency=low
+tomcat7 (7.0.14-1) unstable; urgency=low
 
   [ Ernesto Hernández-Novich ]
   * New upstream release.
