--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tomcat7 (7.0.14-2) UNRELEASED; urgency=low
+
+  * Add missing deps and symlinks for commons-pool ands commons-dbcp jars.
+
+ -- Miguel Landaeta <miguel@miguel.cc>  Wed, 18 May 2011 18:24:33 -0430
+
 tomcat7 (7.0.14-1) unstable; urgency=low
 
   * Team upload.
