--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-tomcat7 (7.0.14-2) UNRELEASED; urgency=low
+tomcat7 (7.0.16-1) UNRELEASED; urgency=low
 
   [ Miguel Landaeta ]
+  * New upstream release.
   * Add missing deps and symlinks for commons-pool ands commons-dbcp jars.
 
   [ tony mancill ]
   * Add logrotate file for catalina.out.
 
- -- tony mancill <tmancill@debian.org>  Thu, 09 Jun 2011 23:20:41 -0700
+ -- Miguel Landaeta <miguel@miguel.cc>  Mon, 20 Jun 2011 19:28:42 -0430
 
 tomcat7 (7.0.14-1) unstable; urgency=low
 
