--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 tomcat7 (7.0.22-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Fix lintian warning about format specification of copyright file.
 
  -- Miguel Landaeta <miguel@miguel.cc>  Tue, 04 Oct 2011 18:40:11 -0430
 
