--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 tomcat7 (7.0.22-1) UNRELEASED; urgency=low
 
+  [ Miguel Landaeta ]
   * New upstream release.
   * Fix lintian warning about format specification of copyright file.
 
- -- Miguel Landaeta <miguel@miguel.cc>  Tue, 04 Oct 2011 18:40:11 -0430
+  [ tony mancill ]
+  * Add dependency on JRE to tomcat7-common (Closes: #644340)
+
+ -- tony mancill <tmancill@debian.org>  Sat, 08 Oct 2011 21:07:40 -0700
 
 tomcat7 (7.0.21-1) unstable; urgency=low
 
