--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat7 (7.0.23-1) UNRELEASED; urgency=low
+tomcat7 (7.0.23-1) unstable; urgency=low
 
   * New upstream release.
   * Refresh patches.
