--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ tomcat7 (7.0.26-1) UNRELEASED; urgency=low
   [ Jakub Adam ]
   * New upstream release.
   * Add Jakub Adam to Uploaders.
+  * Bump Standards-Version to 3.9.3.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Sat, 25 Feb 2012 20:51:36 +0100
 
