Update OSGi metadata, use jh_manifest for modifying MANIFEST.MF

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 tomcat7 (7.0.26-2) UNRELEASED; urgency=low
 
+  [ tony mancill ]
   * Add Turkish debconf translation.  (Closes: #664683)
     - Thanks to Atila KOÇ
+
+  [ Jakub Adam ]
+  * Update OSGi metadata, use jh_manifest for modifying MANIFEST.MF.
 
  -- tony mancill <tmancill@debian.org>  Wed, 21 Mar 2012 22:37:39 -0700
 
