--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat7 (7.0.26-2) UNRELEASED; urgency=low
+tomcat7 (7.0.26-2) unstable; urgency=low
 
   [ tony mancill ]
   * Add Turkish debconf translation. (Closes: #664683)
