--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+tomcat7 (7.0.26-3) UNRELEASED; urgency=low
+
+  * Team upload.
+  * Apply patches provided by James Page (Closes: #671370)
+    - d/patches/0012-java7-compat.patch: Added compatibility patch to
+      support compilation with openjdk-7 as default-jdk (LP: #889002).
+    - d/default_root/index.html: Fixup instructions for enabling
+      manager web application access (LP: #910368).
+
+ -- tony mancill <tmancill@debian.org>  Fri, 04 May 2012 21:23:42 -0700
+
 tomcat7 (7.0.26-2) unstable; urgency=low
 
   [ tony mancill ]
